paths/usr/share/cargo/registry/gtk4-macros-0.7.2/tests/compile-fail/composite-template-missing-id.rs
rust-gtk4-macros-devel
